--- a/BookStore/Views/Book/Create.cshtml
+++ b/BookStore/Views/Book/Create.cshtml
@@ -10,13 +10,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
+            @if(ViewBag.Message !=null){
+                <h5 class="alert alert-danger">@ViewBag.Message</h5>
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="BookId" class="control-label"></label>
-                <input asp-for="BookId" class="form-control" />
-                <span asp-validation-for="BookId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -28,10 +26,16 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="File" class="control-label"></label>
+                <input type="file" name="File" asp-for="File" class="form-control" />
+                <span asp-validation-for="File" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
-                <select asp-for="AuthorId" class="form-control" asp-items="@(new SelectList(Model.Authors,"Id","FullName"))" ></select>
+                <select  asp-for="AuthorId" class="form-control" asp-items="@(new SelectList(Model.Authors,"Id","FullName"))" ></select>
                 <span asp-validation-for="AuthorId" class="text-danger"></span>
             </div>
+
             <div class="form-group my-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
