--- a/BookStore/Views/Book/Edit.cshtml
+++ b/BookStore/Views/Book/Edit.cshtml
@@ -33,8 +33,8 @@
                 <input type="file" name="File" asp-for="File" class="form-control" />
                 <span asp-validation-for="File" class="text-danger"></span>
                 <img src="~/uploads/@Model.ImageUrl" style="width:124px;" class="img-thumbnail" />
-
             </div>
+            <input type="hidden" name="ImageUrl" asp-for="File" class="form-control" />
             <div class="form-group">
                 <label asp-for="AuthorId" class="control-label"></label>
                 <select asp-for="AuthorId" class="form-control" asp-items="@(new SelectList(Model.Authors,"Id","FullName"))"></select>
